--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -574,39 +574,147 @@ body{
                         padding: 10px 16px 10px 24px;
                         .leave-requests-table{
                             min-width: 100%;
-                            // .table-head{
-                            //     padding: 10px;
-                            // }
                             .table-head-row {
                                 border-radius: 8px;
                                 background-color: #272727;
                                 padding: 12px 20px;
-                                display: flex;
 
                             }
                             .table-head-row,.table-body-row{
                                 td {
+                                    padding: 10px;
                                     .sort-icon {
                                         margin-left: 10px;
                                     }
                                 }
                                 .check-col{
-                                    width: 5%;
+                                    border-top-left-radius: 20px;
+                                    border-bottom-left-radius: 20px;
+                                    width: 10%;
                                     input[type=checkbox] {
                                         margin-right: 10px;
                                     }
                                 }
+                                .pending-request,.approved-request{
+                                    position: relative;
+                                }
+                                .pending-request::after{
+                                    position: absolute;
+                                    content: '';
+                                    top: 25px;
+                                    width: 8px;
+                                    height: 8px;
+                                    border-radius: 50%;
+                                    background: #FFD928;
+                                }
+                                .approved-request::after{
+                                    position: absolute;
+                                    content: '';
+                                    top: 25px;
+                                    width: 8px;
+                                    height: 8px;
+                                    border-radius: 50%;
+                                    background: green;
+                                }
                                 .name-col{
-                                    width: 35%;
+                                    // width: 30%;
+                                    display: flex;
+                                    align-items: center;
+                                    .user-name{
+                                        color: #FFF;
+                                        font-family: Inter;
+                                        font-size: 14px;
+                                        font-style: normal;
+                                        font-weight: 400;
+                                        line-height: 20px;
+                                        margin-left: 12px;
+                                    }
+                                }
+                                .period-col{
+                                    // width: 30%;
+                                    .period-col-span{
+                                        display: flex;
+                                        flex-direction: column;
+                                        label{
+                                        color: #FFF;
+                                        font-family: Urbanist;
+                                        font-size: 15.528px;
+                                        font-style: normal;
+                                        font-weight: 500;
+                                        line-height: normal;
+                                        letter-spacing: 0.776px;  
+                                    }}
                                 }
                                 .days-col{
-                                    width: 10%;
+                                    // width: 10%;
                                 }
                                 .leave-col{
-                                    width: 15%;
+                                    // width: 15%;
                                 }
                                 .actions-col{
-                                    width: 35%;
+                                    border-top-right-radius: 20px;
+                                    border-bottom-right-radius: 20px;
+                                    // width: 35%;
+                                    .actions-col-span{
+                                        display: flex;
+                                        align-items:center;
+                                        justify-content: space-between;
+                                        .buttons-span{
+                                            display: flex;
+                                            align-items: center;
+                                            .reject,.approve {
+                                            width: 98px;
+                                            height: 40px;
+                                            border-radius: 20px;
+                                            }
+                                            .reject {
+                                                border: solid 2px #898989;
+                                                background-color: #1E1E1E;
+                                                color:#FFF;
+                                                font-family: Urbanist;
+                                                font-size: 15px;
+                                                font-style: normal;
+                                                font-weight: 700;
+                                                line-height: 140%; /* 21px */
+                                                text-transform: uppercase;
+                                            }
+                                            .approve{
+                                                border: solid 2px #6E56E0;
+                                                background-color: #6E56E0;
+                                                color:#FFF;
+                                                font-family: Urbanist;
+                                                font-size: 15px;
+                                                font-style: normal;
+                                                font-weight: 700;
+                                                line-height: 140%; /* 21px */
+                                                text-transform: uppercase;
+                                                margin-left: 8px;
+                                            }
+                                        }
+                                        .approved-buttons-span{
+                                            display: flex;
+                                            align-items: center;
+                                            justify-content: flex-end;
+                                            min-width: 204px;
+                                            .approve {
+                                            width: 110px;
+                                            height: 40px;
+                                            border-radius: 20px;
+                                            }
+                                            .approve{
+                                                border: solid 2px #6E56E0;
+                                                background-color: #6E56E0;
+                                                color:#FFF;
+                                                font-family: Urbanist;
+                                                font-size: 15px;
+                                                font-style: normal;
+                                                font-weight: 700;
+                                                line-height: 140%; /* 21px */
+                                                text-transform: uppercase;
+                                                margin-left: 8px;
+                                            }
+                                        }
+                                    }
                                 }
                             }
                         }
