components positions fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,6 @@ body {
 }
 
 .top-bar {
-  position: -webkit-sticky;
-  position: sticky;
   top: 0;
   display: flex;
   color: #fff;
@@ -18,6 +16,9 @@ body {
   border-bottom: solid 2px #272727;
   background-color: #151515;
   z-index: 1;
+  position: fixed;
+  width: calc(100% - 80px);
+  top: 0;
 }
 .top-bar .logo-wrapper {
   padding: 20px 16px 20px 0;
@@ -115,6 +116,7 @@ body {
   width: 240px;
   border-right: solid 2px #272727;
   min-height: calc(100vh - 89.52px);
+  position: fixed;
 }
 .page-content .nav-bar .nav-list {
   list-style: none;
@@ -166,13 +168,19 @@ body {
   padding: 16px 40px;
   color: #fff;
   position: relative;
-  width: 100%;
+  width: calc(100vw - 272px);
+  margin-left: 272px;
   /*--------------------------------------------Dashboard Component--------------------------------------------*/
   /*--------------------------------------------Notifications Component--------------------------------------------*/
 }
 .page-content .main-content .tabs-row {
   display: flex;
   align-items: center;
+  top: 74px;
+  position: fixed;
+  background: #151515;
+  width: calc(100% - 342px);
+  z-index: 1;
 }
 .page-content .main-content .tabs-row .tabs-list {
   display: flex;
@@ -201,6 +209,7 @@ body {
 .page-content .main-content .dashboard-component {
   display: flex;
   flex-direction: column;
+  margin-top: 140px;
 }
 .page-content .main-content .dashboard-component .component-title {
   color: #FFF;
