--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -961,4 +961,36 @@ body{
         }
     }
 }
-  
+
+.approve-toast-notification {
+    position: absolute;
+    z-index: 100;
+    top: 30px;
+    left: 20px;
+    background: #1E1E1E;
+    // background: #800;
+    // background: #fff;
+    color: #fff;
+    min-width: 340px;
+    min-height: 122px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    .notification-header{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        .progress-bar{
+            margin: 5px 10px;
+            // max-width: 100%;
+            height: 8px;
+            background-color: #888;
+            border-radius: 4px;
+            .progress{
+                width: 50%;
+                height: 100%;
+                background: #FFD928;
+            }
+        }
+    }
+}
