--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -943,7 +943,7 @@ body {
 }
 
 .approve-toast-notification {
-  position: absolute;
+  position: fixed;
   z-index: 100;
   top: 30px;
   left: 20px;
@@ -961,13 +961,46 @@ body {
   width: 100%;
 }
 .approve-toast-notification .notification-header .progress-bar {
-  margin: 5px 10px;
+  margin: 15px 10px;
   height: 8px;
   background-color: #888;
   border-radius: 4px;
+  overflow: hidden;
 }
 .approve-toast-notification .notification-header .progress-bar .progress {
-  width: 50%;
+  width: 100%;
   height: 100%;
   background: #FFD928;
+}
+.approve-toast-notification .notification-header .toast-title {
+  margin: 5px 10px;
+  border-bottom: solid 2px #272727;
+  padding-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.approve-toast-notification .notification-header .toast-title p {
+  margin: 0px;
+}
+.approve-toast-notification .notification-header .toast-title .close-notification-span {
+  display: flex;
+  align-items: center;
+}
+.approve-toast-notification .notification-header .toast-title .close-notification-span img {
+  max-width: 50%;
+  margin-left: 10px;
+}
+.approve-toast-notification .notification-body {
+  padding: 10px;
+}
+.approve-toast-notification .notification-body .notification-message {
+  color: #FFF;
+  font-family: Urbanist;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 125%;
+  margin: 0px;
+  margin: 0px 10px;
 }/*# sourceMappingURL=style.css.map */
