--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -963,13 +963,11 @@ body{
 }
 
 .approve-toast-notification {
-    position: absolute;
+    position: fixed;
     z-index: 100;
     top: 30px;
     left: 20px;
     background: #1E1E1E;
-    // background: #800;
-    // background: #fff;
     color: #fff;
     min-width: 340px;
     min-height: 122px;
@@ -980,17 +978,51 @@ body{
         display: flex;
         flex-direction: column;
         width: 100%;
+        // margin-top: 10px;
         .progress-bar{
-            margin: 5px 10px;
+            margin: 15px 10px;
             // max-width: 100%;
             height: 8px;
             background-color: #888;
             border-radius: 4px;
+            overflow: hidden;
             .progress{
-                width: 50%;
+                width: 100%;
                 height: 100%;
                 background: #FFD928;
             }
+        }
+        .toast-title{
+            margin: 5px 10px;
+            border-bottom: solid 2px #272727;
+            padding-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            p {
+                margin: 0px;
+            }
+            .close-notification-span{
+                display: flex;
+                align-items: center;
+                img {
+                    max-width: 50%;
+                    margin-left: 10px;
+                }
+            }
+        }
+    }
+    .notification-body{
+        padding: 10px;
+        .notification-message{
+            color: #FFF;
+            font-family: Urbanist;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 125%;
+            margin: 0px;
+            margin: 0px 10px;
         }
     }
 }
