--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1008,6 +1008,7 @@ body{
                 img {
                     max-width: 50%;
                     margin-left: 10px;
+                    cursor: pointer;
                 }
             }
         }
