--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -961,6 +961,186 @@ body{
                 }
             }
         }
+        .leave-deatils-component{
+            width: 464px;
+            min-height: calc(100vh - 90px);
+            padding: 0 24px 24px 24px;
+            border-left: solid 2px #272727;
+            position: fixed;
+            z-index: 1;
+            background-color: #151515;
+            right: 0px;
+            top: 74px;
+            // .notify-header{
+            //     display: flex;
+            //     align-items: center;
+            //     justify-content: space-between;
+            //     .mark-all-box{
+            //         display: flex;
+            //         align-items: center;
+            //         label{
+            //             color:rgba(255, 255, 255, 0.65);
+            //             font-family: Inter !important;
+            //             font-size: 14px;
+            //             font-style: normal;
+            //             font-weight: 400;
+            //             line-height: 20px;
+            //             margin-right: 4px;
+            //     }
+            //     }
+            // }
+            .leave-details-header{
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+            }
+            .user-details-card{
+                border: solid 2px #272727;
+                border-radius: 12px;
+                padding: 16px;
+                .user-details-component{
+                    border-bottom: solid 2px #272727;
+                    display: flex;
+                    align-items: flex-start;
+                    padding-bottom: 15px;
+                    .user-info-component{
+                    margin-left:16px;
+                    .user-info-row{
+                        display: flex;
+                        align-items: center;
+                        .info-key{
+                            min-width: 95px;
+                            color: #898989;
+                            font-family: Urbanist;
+                            font-size: 14px;
+                            font-style: normal;
+                            font-weight: 500;
+                            line-height: 20px;
+                        }
+                        .info-value{
+                            flex:1;
+                            color: #FFF;
+                            /* Regular/Small */
+                            font-family: Inter;
+                            font-size: 14px;
+                            font-style: normal;
+                            font-weight: 500;
+                            line-height: 20px;
+                            margin-left: 10px;
+                        }
+                        .attachment-value{
+                            display: flex;
+                            align-items: center;
+                            img {
+                                margin-right : 5px
+                            }
+                        }
+                    }
+                    }
+                }
+                .leave-days-info-component{
+                    margin-top: 15px;
+                    .leave-start-end-date{
+                        color: #898989;
+                        font-family: Urbanist;
+                        font-size: 12px;
+                        font-style: normal;
+                        font-weight: 700;
+                        line-height: normal;
+                        letter-spacing: 0.6px;
+                        text-transform: uppercase;
+                    }
+                    .leave-hours-and-table-controller-row{
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        .total-hours-text{
+                            margin: 0px;
+                            color: #FFF;
+                            font-family: Urbanist;
+                            font-size: 12px;
+                            font-style: normal;
+                            font-weight: 700;
+                            line-height: normal;
+                            letter-spacing: 0.6px;
+                            text-transform: uppercase;
+                        }
+                        .table-visibility-controller{
+                            display: flex;
+                            align-items: center;
+                        }
+                    }
+                }
+            }
+            // .notifications-list{
+            //     list-style: none;
+            //     padding: 0px;
+            //     overflow-y: auto;
+            //     max-height: 80vh;
+            //     .notifications-list-item{
+            //         background: #1E1E1E;
+            //         display: flex;
+            //         gap: 16px;
+            //         margin-bottom: 8px ;
+            //         border-radius: 12px;
+            //         padding: 16px;
+            //         .notification-user-avatar{
+            //             min-width: 48px;
+            //             position: relative;
+            //             background: transparent;
+            //             display: flex;
+            //             justify-content: flex-end;
+            //             img{
+            //                 width: 40px;
+            //                 height: 40px;
+            //                 position: relative;
+            //                 background: transparent;
+            //             }
+            //         }
+            //         .active::before{
+            //             content: '';
+            //             width: 8px;
+            //             height: 8px;
+            //             border-radius: 50%;
+            //             background: #FFD928;
+            //             position: absolute;
+            //             top: 0px;
+            //             left: 0px;
+            //         }
+            //         .notifications-content-component{
+            //             display: flex;
+            //             flex-direction: column;
+            //             background-color: transparent;
+            //             gap: 12px;
+            //             .notification-message{
+            //                 color: #FFF;
+            //                 font-family: Inter;
+            //                 font-size: 14px;
+            //                 font-style: normal;
+            //                 font-weight: 400;
+            //                 line-height: 20px;
+            //                 margin: 0px;
+            //                 background: transparent;
+            //                 .user-name{
+            //                     font-weight: 700;
+            //                     background: transparent;
+            //                     margin-right: 8px;
+            //                 }
+            //             }
+            //             .notification-time{
+            //                 color: #ccc;
+            //                 font-family: Inter;
+            //                 font-size: 14px;
+            //                 font-style: normal;
+            //                 font-weight: 500;
+            //                 line-height: 20px;
+            //                 background: transparent
+            //             }
+            //         }
+            //     }
+            // }
+        }
     }
 }
 
