--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1037,6 +1037,62 @@ body {
   display: flex;
   align-items: center;
 }
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-info-component .leave-hours-and-table-controller-row .table-visibility-controller img {
+  margin-left: 15px;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table {
+  width: 100%;
+  margin-top: 15px;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-head {
+  background-color: #272727;
+  overflow: hidden;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-head .first-col {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-head .last-col {
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-head td {
+  padding: 10px;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-head td label {
+  color: #898989;
+  font-family: Urbanist;
+  font-size: 13.587px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.679px;
+  text-transform: uppercase;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-body-row td {
+  padding: 8px 10px 2px 10px;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-body-row td label {
+  color: #FFF;
+  font-family: Urbanist;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.65px;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-off-days-body-row td {
+  padding: 8px 10px 5px;
+}
+.page-content .main-content .leave-deatils-component .user-details-card .leave-days-table-component .leave-days-table .table-off-days-body-row td label {
+  color: #898989;
+  font-family: Urbanist;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.65px;
+}
 
 .approve-toast-notification {
   position: fixed;
