--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1069,6 +1069,68 @@ body{
                         .table-visibility-controller{
                             display: flex;
                             align-items: center;
+                            img {
+                                margin-left: 15px;
+                            }
+                        }
+                    }
+                }
+                .leave-days-table-component{
+                    .leave-days-table{
+                        width: 100%;
+                        margin-top: 15px;
+                        .table-head{
+                            background-color: #272727;
+                            overflow: hidden;
+                            .first-col{
+                                border-top-left-radius: 8px;
+                                border-bottom-left-radius: 8px;
+                            }
+                            .last-col{
+                                border-top-right-radius: 8px;
+                                border-bottom-right-radius: 8px;
+                            }
+                            td{
+                                padding: 10px;
+                                label {
+                                    color: #898989;
+                                    font-family: Urbanist;
+                                    font-size: 13.587px;
+                                    font-style: normal;
+                                    font-weight: 500;
+                                    line-height: normal;
+                                    letter-spacing: 0.679px;
+                                    text-transform: uppercase;
+                                }
+                            }
+                        }
+                        .table-body-row{
+                            td {
+                                padding: 8px 10px 2px 10px;
+                                label{
+                                    color: #FFF;
+                                    font-family: Urbanist;
+                                    font-size: 13px;
+                                    font-style: normal;
+                                    font-weight: 700;
+                                    line-height: normal;
+                                    letter-spacing: 0.65px;
+                                }
+                            }
+                        }
+                        .table-off-days-body-row{
+                            td {
+                                padding: 8px 10px 5px;
+                                label{
+                                    color: #898989;
+                                    font-family: Urbanist;
+                                    font-size: 13px;
+                                    font-style: normal;
+                                    font-weight: 400;
+                                    line-height: normal;
+                                    letter-spacing: 0.65px;
+                                }
+                            }
                         }
                     }
                 }
